# ben-s-learning-agent-

./: .env  .env.example  .gitignore  Procfile  README.md  agent_dashboard.html  agent_observer.py  belief_graph_rules.py  graph_utils.py  index.html  ingest.py  knowledge_retriever.py  llm_client.py  models.py  package-lock.json  pipeline.py  prompts.py  pyproject.toml  requirements.txt  run.sh  run_chat.py  server.py  smart_router.py
.claude/: settings.local.json
backend/src/1-config/: .env  .env.development  .env.production  .env.staging  .env.test
frontend/src/: app.html
frontend/src/components/: Char3DViewer.js
knowledge/: README.md  knowledge_core.md
src/genie/: __init__.py  api_server.py  context_manager.py  event_bus.py  llm_provider.py  orchestrator.py  parser.py  schemas.py  step_id.py
src/genie.egg-info/: SOURCES.txt  requires.txt
src/genie/crew/: __init__.py  agents.py  runner.py  tasks.py
src/genie/storage/: __init__.py  db.py  migrations.sql  repositories.py
tests/: test_idempotency.py  test_routing.py  test_schema_validation.py  test_sse_stream.py
userdata/: user_1160130875fda0812c99c5e3f1a03516471a6370c4f97129b221938eb4763e63.json  user_319564bb567b2ec091976757b898039755db244736b0769cc4788805bbf23fa0.json  user_72a0ddeca88891e0548c9d0a24cf29c1fa3aa3574fdd8865b1aad1aa10126803.json  user_d9eaad84_knowledge.json  user_e105fc26_knowledge.json
